It even works in combination with `--continuous` now.
By default, the VM arguments are not printed, but only when the `-a`/`--list-vmargs` option is set.
** Remove dependency on `jps` +
Even when matching on the main class name or on system properties,
** Checks the Java version before attaching to avoid attachment on unsupported JVMs.
* Cassandra instrumentation - {pull}1712[#1712]

[float]
===== Bug fixes
* Fixed log correlation for log4j2 - {pull}1720[#1720]
* Fix apm-log4j1-plugin and apm-log4j2-plugin dependency on slf4j - {pull}1723[#1723]
* Avoid systematic `MessageNotWriteableException` error logging, now only visible in `debug` - {pull}1715[#1715]
* Fix rounded number format for non-english locales - {pull}1728[#1728]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.22.0]]
==== 1.22.0 - 2021/03/24

[float]
===== Breaking changes
* Dots in metric names of Micrometer metrics get replaced with underscores to avoid mapping conflicts.
De-dotting be disabled via <<config-dedot-custom-metrics, `dedot_custom_metrics`>>. - {pull}1700[#1700]

[float]
===== Features
* Introducing a new mechanism to ease the development of community instrumentation plugins. See <<config-plugins-dir>> for
more details. This configuration was already added in 1.18.0, but more extensive and continuous integration testing
allows us to expose it now. It is still marked as "experimental" though, meaning that future changes in the mechanism
may break early contributed plugins. However, we highly encourage our community to try it out and we will do our best
to assist with such efforts.
* Deprecating `ignore_user_agents` in favour of `transaction_ignore_user_agents`, maintaining the same functionality -
{pull}1644[#1644]
* Update existing Hibernate Search 6 instrumentation to the final relase
* The <<config-use-path-as-transaction-name, `use_path_as_transaction_name`>> option is now dynamic