@@ -46,6 +46,7 @@ public class MdcActivationListener implements ActivationListener {
     private static final String LOG4J_MDC = "org.apache.log4j.MDC";
     // prevents the shade plugin from relocating org.apache.logging.log4j.ThreadContext to co.elastic.apm.agent.shaded.apache.logging.log4j.ThreadContext
     private static final String LOG4J2_MDC = "org!apache!logging!log4j!ThreadContext".replace('!', '.');
+    private static final String JBOSS_LOGGING_MDC = "org.jboss.logging.MDC";
 
     private static final String TRACE_ID = "trace.id";
     private static final String TRANSACTION_ID = "transaction.id";
@@ -94,6 +95,19 @@ public class MdcActivationListener implements ActivationListener {
                     return NOOP;
                 }
             }
+        }),
+        new WeakKeySoftValueLoadingCache<>(new WeakKeySoftValueLoadingCache.ValueSupplier<ClassLoader, MethodHandle>() {
+            @Nullable
+            @Override
+            public MethodHandle get(ClassLoader classLoader) {
+                try {
+                    return MethodHandles.lookup()
+                        .findStatic(classLoader.loadClass(JBOSS_LOGGING_MDC), "put", MethodType.methodType(Object.class, String.class, Object.class));
+                } catch (Exception e) {
+                    logger.debug("Class loader " + classLoader + " cannot load JBoss Logging API", e);
+                    return NOOP;
+                }
+            }
         })
     };
 
@@ -131,6 +145,19 @@ public class MdcActivationListener implements ActivationListener {
                 try {
                     return MethodHandles.lookup()
                         .findStatic(classLoader.loadClass(LOG4J2_MDC), "remove", MethodType.methodType(void.class, String.class));
+                } catch (Exception ignore) {
+                    // No need to log - logged already when populated the put cache
+                    return NOOP;
+                }
+            }
+        }),
+        new WeakKeySoftValueLoadingCache<>(new WeakKeySoftValueLoadingCache.ValueSupplier<ClassLoader, MethodHandle>() {
+            @Nullable
+            @Override
+            public MethodHandle get(ClassLoader classLoader) {
+                try {
+                    return MethodHandles.lookup()
+                        .findStatic(classLoader.loadClass(JBOSS_LOGGING_MDC), "remove", MethodType.methodType(void.class, String.class));
                 } catch (Exception ignore) {
                     // No need to log - logged already when populated the put cache
                     return NOOP;
