@@ -60,6 +60,7 @@ By default, the VM arguments are not printed, but only when the `-a`/`--list-vma
 Even when matching on the main class name or on system properties,
 ** Checks the Java version before attaching to avoid attachment on unsupported JVMs.
 * Cassandra instrumentation - {pull}1712[#1712]
+* Log correlation supports JBoss Logging - {pull}1737[#1737]
 
 [float]
 ===== Bug fixes
